[gd_scene load_steps=5 format=3 uid="uid://kv32n7pw0kmc"]

[ext_resource type="Script" uid="uid://csdo2dhy3k6qq" path="res://Assets/Scripts/Characters/npc.gd" id="1_lvd16"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lvd16"]
radius = 4.0
height = 8.0

[sub_resource type="SpriteFrames" id="SpriteFrames_fbhi2"]
resource_local_to_scene = true
animations = [{
"frames": [],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"talking",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ufp67"]
radius = 19.0

[node name="NPC" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_lvd16")

[node name="NPC" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC"]
z_index = 1
y_sort_enabled = true
position = Vector2(1, 4)
shape = SubResource("CapsuleShape2D_lvd16")

[node name="InteractTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_fbhi2")
animation = &"talking"
offset = Vector2(0, -5)
metadata/dialogue = ""

[node name="InteractZone" type="Area2D" parent="."]
z_index = 1
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractZone"]
position = Vector2(1, -10)
shape = SubResource("CircleShape2D_ufp67")

[connection signal="timeout" from="InteractTimer" to="NPC" method="_on_interact_timer_timeout"]
[connection signal="body_entered" from="InteractZone" to="." method="_on_interact_zone_body_entered"]
[connection signal="body_exited" from="InteractZone" to="." method="_on_interact_zone_body_exited"]
